banking-app/canary/account-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: account
  namespace: banking-app
spec:
  hosts:
    - account.banking-app.svc.cluster.local
  http:
    - name: "account-v1-route"
      route:
        - destination:
            host: account.banking-app.svc.cluster.local
            subset: v1
          weight: 100
        - destination:
            host:  account.banking-app.svc.cluster.local
            subset: v2
          weight: 0
